--- a/DirectＸ.vcxproj.filters
+++ b/DirectＸ.vcxproj.filters
@@ -18,7 +18,7 @@
     <ClCompile Include="main.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="WindowsClass.cpp">
+    <ClCompile Include="class\WindowsClass.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
@@ -32,7 +32,7 @@
     <FxCompile Include="Odject3d.PS.hlsl" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="WindowsClass.h">
+    <ClInclude Include="class\WindowsClass.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
