--- a/DirectＸ.vcxproj
+++ b/DirectＸ.vcxproj
@@ -90,10 +90,10 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="class\DixApp.cpp" />
-    <ClCompile Include="class\Polygon.cpp" />
-    <ClCompile Include="class\WinApp.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Myclass\DixApp.cpp" />
+    <ClCompile Include="Myclass\Polygon.cpp" />
+    <ClCompile Include="Myclass\WinApp.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Text Include=".editorconfig" />
@@ -113,9 +113,9 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     </FxCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="class\DixApp.h" />
-    <ClInclude Include="class\Polygon.h" />
-    <ClInclude Include="class\WinApp.h" />
+    <ClInclude Include="Myclass\DixApp.h" />
+    <ClInclude Include="Myclass\Polygon.h" />
+    <ClInclude Include="Myclass\WinApp.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
