--- a/DirectＸ.vcxproj
+++ b/DirectＸ.vcxproj
@@ -91,7 +91,7 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="Myclass\DixApp.cpp" />
+    <ClCompile Include="Myclass\Dxcommen.cpp" />
     <ClCompile Include="Myclass\Polygon.cpp" />
     <ClCompile Include="Myclass\WinApp.cpp" />
   </ItemGroup>
@@ -113,7 +113,7 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     </FxCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Myclass\DixApp.h" />
+    <ClInclude Include="Myclass\Dxcommen.h" />
     <ClInclude Include="Myclass\Polygon.h" />
     <ClInclude Include="Myclass\WinApp.h" />
   </ItemGroup>
