--- a/DirectＸ.vcxproj.filters
+++ b/DirectＸ.vcxproj.filters
@@ -25,19 +25,28 @@
     <Filter Include="ヘッダー ファイル\Dase">
       <UniqueIdentifier>{10de9f61-345b-4b01-bae2-c837405a2ee6}</UniqueIdentifier>
     </Filter>
+    <Filter Include="ソース ファイル\math">
+      <UniqueIdentifier>{e6d4ccd5-453e-4f44-8613-1c3aa0458652}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ヘッダー ファイル\math">
+      <UniqueIdentifier>{ca65eeff-edec-4dc9-8106-08555d1fd65f}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="Myclass\Polygon.cpp">
+    <ClCompile Include="Myclass\math\Math.cpp">
+      <Filter>ソース ファイル\math</Filter>
+    </ClCompile>
+    <ClCompile Include="Myclass\dase\Dxcommen.cpp">
+      <Filter>ソース ファイル\Dase</Filter>
+    </ClCompile>
+    <ClCompile Include="Myclass\dase\WinApp.cpp">
+      <Filter>ソース ファイル\Dase</Filter>
+    </ClCompile>
+    <ClCompile Include="Myclass\type\Polygon.cpp">
       <Filter>ソース ファイル\Type</Filter>
-    </ClCompile>
-    <ClCompile Include="Myclass\Dxcommen.cpp">
-      <Filter>ソース ファイル\Dase</Filter>
-    </ClCompile>
-    <ClCompile Include="Myclass\WinApp.cpp">
-      <Filter>ソース ファイル\Dase</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -50,16 +59,16 @@
     <FxCompile Include="Odject3d.PS.hlsl" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Myclass\Polygon.h">
-      <Filter>ヘッダー ファイル\Type</Filter>
+    <ClInclude Include="Myclass\math\mathStrt.h">
+      <Filter>ヘッダー ファイル\math</Filter>
     </ClInclude>
-    <ClInclude Include="Myclass\Dxcommen.h">
+    <ClInclude Include="Myclass\dase\WinApp.h">
       <Filter>ヘッダー ファイル\Dase</Filter>
     </ClInclude>
-    <ClInclude Include="Myclass\WinApp.h">
+    <ClInclude Include="Myclass\dase\Dxcommen.h">
       <Filter>ヘッダー ファイル\Dase</Filter>
     </ClInclude>
-    <ClInclude Include="PolygonStrt.h">
+    <ClInclude Include="Myclass\type\Polygon.h">
       <Filter>ヘッダー ファイル\Type</Filter>
     </ClInclude>
   </ItemGroup>
