--- a/DirectＸ.vcxproj
+++ b/DirectＸ.vcxproj
@@ -93,22 +93,23 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="externals\imgui\imgui.cpp" />
-    <ClCompile Include="externals\imgui\imgui_demo.cpp" />
-    <ClCompile Include="externals\imgui\imgui_draw.cpp" />
-    <ClCompile Include="externals\imgui\imgui_impl_dx12.cpp" />
-    <ClCompile Include="externals\imgui\imgui_impl_win32.cpp" />
-    <ClCompile Include="externals\imgui\imgui_tables.cpp" />
-    <ClCompile Include="externals\imgui\imgui_widgets.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Myclass\dase\Dxcommen.cpp" />
     <ClCompile Include="Myclass\dase\WinApp.cpp" />
+    <ClCompile Include="Myclass\externals\imgui\imgui.cpp" />
+    <ClCompile Include="Myclass\externals\imgui\imgui_demo.cpp" />
+    <ClCompile Include="Myclass\externals\imgui\imgui_draw.cpp" />
+    <ClCompile Include="Myclass\externals\imgui\imgui_impl_dx12.cpp" />
+    <ClCompile Include="Myclass\externals\imgui\imgui_impl_win32.cpp" />
+    <ClCompile Include="Myclass\externals\imgui\imgui_tables.cpp" />
+    <ClCompile Include="Myclass\externals\imgui\imgui_widgets.cpp" />
     <ClCompile Include="Myclass\math\Math.cpp" />
+    <ClCompile Include="Myclass\type\ImguiManager.cpp" />
     <ClCompile Include="Myclass\type\Polygon.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Text Include=".editorconfig" />
-    <Text Include="externals\imgui\LICENSE.txt" />
+    <Text Include="Myclass\externals\imgui\LICENSE.txt" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Obiject3d.VS.hlsl">
@@ -125,17 +126,18 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     </FxCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="externals\imgui\imconfig.h" />
-    <ClInclude Include="externals\imgui\imgui.h" />
-    <ClInclude Include="externals\imgui\imgui_impl_dx12.h" />
-    <ClInclude Include="externals\imgui\imgui_impl_win32.h" />
-    <ClInclude Include="externals\imgui\imgui_internal.h" />
-    <ClInclude Include="externals\imgui\imstb_rectpack.h" />
-    <ClInclude Include="externals\imgui\imstb_textedit.h" />
-    <ClInclude Include="externals\imgui\imstb_truetype.h" />
     <ClInclude Include="Myclass\dase\Dxcommen.h" />
     <ClInclude Include="Myclass\dase\WinApp.h" />
+    <ClInclude Include="Myclass\externals\imgui\imconfig.h" />
+    <ClInclude Include="Myclass\externals\imgui\imgui.h" />
+    <ClInclude Include="Myclass\externals\imgui\imgui_impl_dx12.h" />
+    <ClInclude Include="Myclass\externals\imgui\imgui_impl_win32.h" />
+    <ClInclude Include="Myclass\externals\imgui\imgui_internal.h" />
+    <ClInclude Include="Myclass\externals\imgui\imstb_rectpack.h" />
+    <ClInclude Include="Myclass\externals\imgui\imstb_textedit.h" />
+    <ClInclude Include="Myclass\externals\imgui\imstb_truetype.h" />
     <ClInclude Include="Myclass\math\mathStrt.h" />
+    <ClInclude Include="Myclass\type\ImguiManager.h" />
     <ClInclude Include="Myclass\type\Polygon.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
