--- a/imgui.ini
+++ b/imgui.ini
@@ -18,3 +18,13 @@ Pos=60,60
 Size=369,138
 Collapsed=0
 
+[Window][Triangle1]
+Pos=60,60
+Size=259,198
+Collapsed=0
+
+[Window][Triangle2]
+Pos=42,262
+Size=308,159
+Collapsed=0
+
