--- a/DirectＸ.vcxproj
+++ b/DirectＸ.vcxproj
@@ -16,6 +16,7 @@
     <ProjectGuid>{9bda7296-296e-4580-946c-cbdeb3139b8f}</ProjectGuid>
     <RootNamespace>DirectＸ</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>DirectX</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
