--- a/DirectＸ.vcxproj
+++ b/DirectＸ.vcxproj
@@ -104,6 +104,7 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClCompile Include="DKJEN\externals\imgui\imgui_impl_win32.cpp" />
     <ClCompile Include="DKJEN\externals\imgui\imgui_tables.cpp" />
     <ClCompile Include="DKJEN\externals\imgui\imgui_widgets.cpp" />
+    <ClCompile Include="DKJEN\Imgui\imguiManager.cpp" />
     <ClCompile Include="DKJEN\Math\Math.cpp" />
     <ClCompile Include="DKJEN\Shader\CompileShader.cpp" />
     <ClCompile Include="DKJEN\Type\Polygon.cpp" />
@@ -140,6 +141,7 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClInclude Include="DKJEN\externals\imgui\imstb_rectpack.h" />
     <ClInclude Include="DKJEN\externals\imgui\imstb_textedit.h" />
     <ClInclude Include="DKJEN\externals\imgui\imstb_truetype.h" />
+    <ClInclude Include="DKJEN\Imgui\imguiManager.h" />
     <ClInclude Include="DKJEN\Math\Math.h" />
     <ClInclude Include="DKJEN\Shader\CompileShader.h" />
     <ClInclude Include="DKJEN\Type\Polygon.h" />
